# lazycommit

./: Cargo.toml  README.md
src/: main.rs  structs.rs
