[package]
name = "lazycommit"
version = "0.1.0"
edition = "2021"
author="heabeounMKTO"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
dotenvy = "0.15.7"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
